postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: billing-db
spec:
  serviceName: "localhost"
  replicas: 1
  selector:
    matchLabels:
      app: billing-db
  template:
    metadata:
      labels:
        app: billing-db
    spec:
      containers:
      - name: postgres
        image: postgres:16
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: pgdata
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi
