service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telecom-api-service
spec:
  selector:
    app: telecom-api
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
